NEW:
	All Mods:
		Added the ability to place map beacons for highlighting areas to teammates.
		Structures under attack and friendly superweapon launch targets will now be highlighted on the radar.
		Fixed unloading passengers moving unnecessarily far from their transport.
		Fixed the unload cursor sometimes being displayed for transports even when they were unable to unload.
		An error dialog is now displayed when server connections are lost.
		Added AttackMove and Guard abilities to Aircraft and Helicopters.
		Aircraft and Helicopters can now be guarded by other units.
		Unified the main menu navigation between TD and other mods:
			Moved Create Game and Direct Connect facilities to the server browser.
			Added skirmish mode to RA and D2k to complement TD's skirmish mode.
			Added an Extras submenu for miscellaneous game extras.
		Engineers can now regain control over husks.
		Husks are now rendered with a black overlay.
		A player's units, and allied units, now move out of the way when blocking production facilities.
		Added cheat button to grow map resources.
		Fixed units staying selected and contributing to control groups when becoming cloaked or hidden in fog.
		Swapped the cursors used for sabotaging and capturing buildings/units.
		Added Ctrl+T shortcut for selection of all units matching the types of the currently selected ones across the screen and map.
		Added a toggle spectators to multiplayer.
		Removed the ability of commandos to plant C4 on walls.
		Order lines are now shown on unit selection.
		Fixed chat synchronization in replays.
		Added a combined shroud view of every player to the replay viewer and spectator mode.
		Added pause, slowdown, play and fastforward buttons for replays.
		Fixed the game sometimes crashing when deploying and activating the guard cursor at the same time.
		Build time is now set when an item reaches the front of a queue, instead of immediately when queued.
		The attack cursor now changes if the target is out of range.